--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2610,107 +2610,107 @@ stories:
   domain: http://www.logandaily.com/
   link: https://www.logandaily.com/neighbors/the-diamond-brothers-appearing-at-the-gazebo-friday/article_917f0d7d-fcb1-5b02-8053-7d60d675a904.html
 images:
-- name: school-clouds-church-clouds-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crafty-painting.jpg
-- name: server-cloud-server-racks-clouds-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-feed-people.jpg
-- name: aws-s3-stories-solidies-planning-attack-blue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-solidies-planning-attack-blue-matrix.jpg
-- name: ellis-island-ellisisland-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-ww2-dresden.jpg
-- name: fence-fence-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-plentiful.jpg
-- name: windowmountain-window-mountain-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-kand-two.jpg
-- name: oldroad-old-road-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-rain.jpg
-- name: old-granary-field-granaryfield-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-atari-missle.jpg
-- name: oldhouse-granaryfield-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-mucha-mult.jpg
-- name: meadowbutterfly-meadow-butterfly-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-colored-circuits.jpg
-- name: liberty-back-statue-liberty-back-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-post-modern.jpg
-- name: downtown-trucksilo-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-sunday.jpg
-- name: gypsy-wagon-gypsywagon-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-electricity.jpg
-- name: server-cloud-server-racks-door-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-kand-two.jpg
-- name: locked-up-steam-lock-up-steam-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-yellow-paper.jpg
-- name: old-granary-field-oldhouse-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colorful-blocks.jpg
-- name: school-clouds-church-clouds-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-gred-mash.jpg
-- name: death-valley-death-valley-national-park-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-mucha-mult.jpg
-- name: old-school-house-old-schoolhouse-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smooth-ride.jpg
-- name: oldtrain-oldtrain-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-ww2-dresden.jpg
-- name: bluelake-creativity-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-01-17-38.jpg
-- name: store-on-corner-oldcabin-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-emily-carr.jpg
-- name: docks-docks-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-green-zuma.jpg
-- name: adam-smith-adam-smith-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kandinsky-bv.jpg
-- name: server-cloud-server-racks-door-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-pablo-blue.jpg
-- name: rain-princess-DSC_0013.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0013.jpg
-- name: adam-smith-adam-smith-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-attack-planes.jpg
-- name: white-house-lawn-white-house-window.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window.jpg
-- name: docks-docks-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dali-two.jpg
-- name: oldhouse-granaryfield-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-kandinsky-bv.jpg
-- name: windowmountain-window-mountain-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-clean-view.jpg
-- name: hollywood-building-hollywood-building-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-jap-wav-pr.jpg
-- name: dc-statue-dcstatue-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-gan-vogh.jpg
-- name: white-house-lawn-white-house-window-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-ww2-color.jpg
-- name: status-berlin-status-berlin-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-jap-wav-pr.jpg
-- name: machine-road-machine-road-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-ww2-dresden.jpg
-- name: christianity-christianity-under-construction-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dali-two.jpg
-- name: aws-s3-stories-new-42-110-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-42-110-800-500-0-max-0--5--5.jpg
-- name: old-door-lock-old-door-lock-2-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colorful-dream.jpg
-- name: wind-mills-windmills-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colored-circuits.jpg
-- name: server-cloud-server-racks-door-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-copper-circuit.jpg
-- name: gypsy-wagon-gypsywagon-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-smooth-ride.jpg
-- name: server-cloud1-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-atari-missle.jpg
-- name: beach-clouds-lifeguard-beachclouds-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-oily-mcoilface.jpg
-- name: white-house-lawn-white-house-window-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-smoking-cigarette.jpg
-- name: downtheline-downtheline-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dry-skin.jpg
-- name: locked-up-steam-lock-up-steam-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit.jpg
-- name: nazi-invasion-IMG_7847.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7847.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-cinnamon-rolls.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-cinnamon-rolls.JPG
-- name: oldbarn-oldbarn-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-gred-mash.jpg
-- name: eduardo-eduardo-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-yellow-paper.jpg
+- name: paris-paris-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-space-pizza.jpg
+- name: oldsmallboat-oldsmallboat-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-satan-red.jpg
+- name: eduardo-eduardo-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-blue-circuit.jpg
+- name: blossombar-crafty-painting-file-00-00-50-55.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-55.jpg
+- name: fence-mexico-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-gred-mash.jpg
+- name: oldcabin-oldcabin-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-monet-one.jpg
+- name: dc-statue-dcstatue-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-really-hot.jpg
+- name: nyc-flag-nycflag-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-cinnamon-rolls.jpg
+- name: adam-smith-adam-smith-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit.jpg
+- name: old-house-oldhouse-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-purple-pond.jpg
+- name: catacombs-catacombs-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-light-dali.jpg
+- name: powerlines-power-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-alien-goggles.jpg
+- name: ellis-island-ellisisland-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-spagetti-accident.jpg
+- name: white-house-lawn-white-house-lawn-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-storm.jpg
+- name: rockingchair-rockingchair-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-neo-instinct.jpg
+- name: meadowbutterfly-meadow-butterfly-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-purple-storm.jpg
+- name: aws-s3-stories-status-berlin-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-status-berlin-matrix.jpg
+- name: rain-princess-IMG_8336.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8336.jpg
+- name: nyc-flag-nycflag-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-ww2-dresden.jpg
+- name: curtain-curtain-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-graham-sutherland.jpg
+- name: wall-cannon-wall-cannon-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon-dark-dali.jpg
+- name: ellis-island-ellisisland-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-alien-goggles.jpg
+- name: abe-lincoln-one-smoking-cigarette-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-07-91.jpg
+- name: capital-battle-capitolbattle-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purp-paper.jpg
+- name: server-cloud-server-racks-clouds-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-jap-wav-pr.jpg
+- name: oldhouse-oldhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-really-hot.jpg
+- name: rain-princess-DSC_0062.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0062.jpg
+- name: containership-containership-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-feed-people.jpg
+- name: border-crossing-bordercrossing-deep-connections.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-deep-connections.png
+- name: eduardo-eduardo-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dry-skin.jpg
+- name: downtown-los-angeles-downtown-la-aqua.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-aqua.JPG
+- name: window-window-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-atari-asteroids.jpg
+- name: downtown-los-angeles-downtown-la-far-away.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-far-away.JPG
+- name: abandonedbuildings_light_dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_light_dali.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit.jpg
+- name: old-cabin-oldcabin-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-sunday.jpg
+- name: castle-wall-DSC-0067-sunday.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-sunday.JPG
+- name: blossombar-blue-brush-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-brush-file-00-00-00-00.jpg
+- name: oldcabin-store-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-blue-granite.jpg
+- name: aws-s3-stories-new-art-museum-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-art-museum-light-dali.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
+- name: aws-s3-diamondcreek-diamondcreek-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still-600.jpg
+- name: legal-statue-legalstatue-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-aqua.jpg
+- name: school-clouds-church-clouds-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-light-dali.jpg
+- name: school-clouds-church-clouds-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-emily-carr.jpg
+- name: aws-s3-royalroads-royalroads-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-royalroads-royalroads-still.jpg
+- name: stories-soldier-computer-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-soldier-computer-dark-dali.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-electricity.jpg
+- name: gypsy-wagon-gypsywagon-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dark-rain.jpg
+- name: beach-clouds-lifeguard-beachclouds-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-matrix.jpg
+- name: stories-new-69-120-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-69-120-800-500-0-max-0-1--1.jpg
 ---
 Keep Moore County Beautiful Announces Scholarship Recipients.&nbsp;Wildlife Between The Books.&nbsp;Kentucky Woman Pleads Guilty To Using Kids For Forced Labor.&nbsp;Board Continues Education To Better Serve District.&nbsp;Man Killed In Crash; Child Injured In Fire.&nbsp;Annual Parade Begins Final Rodeo Day!.&nbsp;Trump Says Tanks Will Be Part Of His July Fourth Celebration.&nbsp;Miami Beach OKs Funds To Start Dredging Clogged Waterways.&nbsp;
